--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 .stApp{
     background : linear-gradient(
         135deg,
-        #d0a9cb 0%,
-        #b0a3ed 50%,
-        #897b9f 100%
+        #8caee9 0%,
+        #73baed 50%,
+        #a47daf 100%
     );
     min-height:100vh;
     font-family:'Segoe UI',sans-serif;
 }
 .card{
-    background-color: #663869;
+    background-color: #3d6d9d;
     padding: 25px;
     border-radius:16px;
     box-shadow: 0 8px 20px rgba(118, 130, 157, 0.08);
@@ -37,4 +37,5 @@ div[data-testid="metric-container"]{
     font-weight: bold;
     color: #14532d;
     margin-top:15px;
+
 }
